sonda-core/tests/snapshots/expand_fixtures__valid_expand_pack_with_overrides.snap
---
source: sonda-core/tests/expand_fixtures.rs
expression: expanded
---
{
  "version": 2,
  "entries": [
    {
      "id": "primary_uplink.ifOperStatus",
      "signal_type": "metrics",
      "name": "ifOperStatus",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "flap",
        "up_duration": "60s",
        "down_duration": "30s"
      },
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp",
        "probe": "synthetic"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      }
    },
    {
      "id": "primary_uplink.ifHCInOctets",
      "signal_type": "metrics",
      "name": "ifHCInOctets",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "step",
        "start": 0.0,
        "step_size": 125000.0
      },
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      }
    },
    {
      "id": "primary_uplink.ifHCOutOctets",
      "signal_type": "metrics",
      "name": "ifHCOutOctets",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "step",
        "start": 0.0,
        "step_size": 62500.0
      },
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      }
    },
    {
      "id": "primary_uplink.ifInErrors",
      "signal_type": "metrics",
      "name": "ifInErrors",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "constant",
        "value": 0.0
      },
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      }
    },
    {
      "id": "primary_uplink.ifOutErrors",
      "signal_type": "metrics",
      "name": "ifOutErrors",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "constant",
        "value": 0.0
      },
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      }
    }
  ]
}
